# templates-and-workflows

./: README.md  cookiecutter.json  port.yml  pyproject.toml
.github/workflows/: lint-and-metrics.yml  scaffold.yml  snyk-scan.yml
src/: bad_code.py
src/your_project_name/: bad_code.py  good_code.py
src/{{ cookiecutter.package_name }}/: good_code.py
