[project]
name = "your-project-name"
version = "0.1.0"
description = "A project scaffolded from our template."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    # Add your core dependencies here, e.g.,
    # "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "flake8-pyproject",
    "black>=25.1.0",
    "pytest>=8.3.5",
    "radon",
    "pytest-cov"
]

[tool.poetry]
packages = [{ include = "your_project_name", from = "src" }]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Configuration for development tools
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = ["venv", ".venv", ".git"]
